fix: line spacing of title when the home page is on mobile

--- a/src/pages/home/index.module.scss
+++ b/src/pages/home/index.module.scss
@@ -157,7 +157,7 @@ $headerZ: 2;
   @media (max-width: $mobileBreakPoint) {
     font-weight: 800;
     font-size: 50px;
-    line-height: 40px;
+    line-height: 80%;
     letter-spacing: -0.025em;
   }
 }
